# griptape-nodes-library-kling

./: .claude.json  .env.example  .gitignore  README.md  kling-update.md  pyproject.toml
kling/: __init__.py  griptape_nodes_library.json  image_to_video.py  kling_v3_multi_shot.py  kling_video.py  library.json  lip_sync.py  motion_control.py  text_to_video.py  video_extension.py
kling/widgets/: MultiShotEditor.js
